2004-05-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b149

	* Fix: Remove border=1 from gallery.footer, added in last checkin

	* Fix: Correct linebreaks in config_data.inc

2004-05-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b148

	* Change: Complete Config Wizard-ization of rss.php

	* Change: Addition of RSS link to the bottom of the gallery.footer
	  if rss is enabled.

2004-05-26  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b147

	* Fix: Remove warnings in rss.php when in dev mode an not reconfigured.

	* Change: Little text change.

2004-05-25  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b146

	* Fixed upload (and slideshow) applets when Gallery is embedded in PHPNuke.
	  Other CMSs may need more work. The applets are confirmed to work
	  with PHPNuke and PostNuke.

2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b145

	* Change: rss.php config options mostly migrated to config wizard.

2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b144

	* Change:  Add "php_value session.save_handler files" to 
	  the php_values.template to proactively prevent some of the 
	  cases where it's set to "user" system-wide.

	* Change: Add a developer-file hook to init.php.  If the file
	  "lib/devel.php" is present on your local system, it will be 
	  included near the top of init.php.  It's a logical location for
	  code profiling modules and such that shouldn't be checked into
	  CVS, but you don't want getting overwritten with each cvs up.

2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b143

	* Change: Only display visible (non-hidden) albums

	* Change: Fix PHP shorttags

	* Change: Text changes

	* Note: Lots of whitespace changes - use "diff -w -r1.1 -r1.2"
	  to see the real changes

2004-05-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b142

	* Add:  Initial version of Cody Smith's RSS Generator
	  Based on rss.php 0.4 - Migration to config.php variables next
