@@ -1,3 +1,8 @@
+2004-05-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b150
+
+	* Fix: rss.php now correctly retrieves highlights which are set
+	  in a sub-album, rather than the target album itself.
+
 2004-05-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b149
 
 	* Fix: Remove border=1 from gallery.footer, added in last checkin
